--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </head>
 
 <body>
-    <img src="https://images.unsplash.com/photo-1545569341-9eb8b30979d9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80" alt="bg" />
+    <img src="https://avatars.githubusercontent.com/u/122119019?v=4" />
     <section>
         <div>
             <img src="https://media.discordapp.net/attachments/721378191922561135/1160938529136848946/unnamed.jpg?ex=65367b42&is=65240642&hm=9a0d2fe36cf9ab142ead8e51e419ac025a80b62c10d16d01cb768e1befcdf19d&=&width=480&height=590" alt="dp" />
