--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 </head>
 
 <body>
-    <img src="https://avatars.githubusercontent.com/u/122119019?v=4" />
+    <img src="https://unsplash.com/photos/the-sun-is-setting-over-the-mountains-in-the-valley-_RZurvkRYM8" />
     <section>
         <div>
-            <img src="https://media.discordapp.net/attachments/721378191922561135/1160938529136848946/unnamed.jpg?ex=65367b42&is=65240642&hm=9a0d2fe36cf9ab142ead8e51e419ac025a80b62c10d16d01cb768e1befcdf19d&=&width=480&height=590" alt="dp" />
+            <img src"https://avatars.githubusercontent.com/u/122119019?v=4" />
             <h2>My socials</h2>
             <div>
                 <a href="">
