--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <img src="https://unsplash.com/photos/the-sun-is-setting-over-the-mountains-in-the-valley-_RZurvkRYM8" />
     <section>
         <div>
-            <img src"" />
+            <img src"https://avatars.githubusercontent.com/u/122119019?v=4" />
             <h2>My socials</h2>
             <div>
                 <a href="">
