--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <img src="https://images.unsplash.com/photo-1545569341-9eb8b30979d9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80" />
     <section>
         <div>
-            <img src"https://instagram.fcai19-7.fna.fbcdn.net/v/t51.2885-19/386902238_1334401690847635_1651514141983245137_n.jpg?stp=dst-jpg_s150x150&amp;_nc_ht=instagram.fcai19-7.fna.fbcdn.net&amp;_nc_cat=107&amp;_nc_ohc=mvyK66k4LpMAX8jY2mv&amp;edm=AOQ1c0wBAAAA&amp;ccb=7-5&amp;oh=00_AfCWf6xk0U1NGlyAMB4alHy9xGvM-4SgNQvdFWpp7PMr0Q&amp;oe=6532C283&amp;_nc_sid=8b3546" />
+            <img src="https://instagram.fcai19-7.fna.fbcdn.net/v/t51.2885-19/386902238_1334401690847635_1651514141983245137_n.jpg?stp=dst-jpg_s150x150&amp;_nc_ht=instagram.fcai19-7.fna.fbcdn.net&amp;_nc_cat=107&amp;_nc_ohc=mvyK66k4LpMAX8jY2mv&amp;edm=AOQ1c0wBAAAA&amp;ccb=7-5&amp;oh=00_AfCWf6xk0U1NGlyAMB4alHy9xGvM-4SgNQvdFWpp7PMr0Q&amp;oe=6532C283&amp;_nc_sid=8b3546" />
             <h2>My socials</h2>
             <div>
                 <a href="">
@@ -125,6 +125,11 @@
                 <a href="https://www.instagram.com/4n.4_s">
                     <i class="fa-brands fa-instagram"></i>
                     <p>Instagram</p>
+                </a>
+                                </a>
+                <a href="https://wa.me/qr/T6SOQRUV3PL6M1">
+                    <i class="fa-brands fa-whatsapp"></i>
+                    <p>Whatsapp</p>
                 </a>
 
             </div>
