--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
             <img src="https://avatars.githubusercontent.com/u/122119019?v=4" />
             <h2>My socials</h2>
             <div>
-                <a href="">
+                <a href="https://drive.google.com/file/d/1bMajQcrqac1mChGvUz6jDGnxgKscdWNf/view?usp=drive_link">
                     <i class="fa-solid fa-mobile"></i>
-                    <p>01012171666</p>
+                    <p>Phone Number</p>
                 </a>
                 <a href="https://www.snapchat.com/add/anas_idk0?share_id=m7j3Bcb3kX8&locale=en-US">
                     <i class="fa-brands fa-snapchat"></i>
