--- a/index.html
+++ b/index.html
@@ -86,11 +86,13 @@
             border: 1.5px solid rgb(0, 0, 0);
             padding: 15px;
             color: rgb(255, 255, 255);
+            background: rgb(255, 255, 255);
             text-shadow: 0 0 4px transparent, 0 1px 2px rgb(218, 218, 218);
             text-decoration: none;
             gap: 20px;
             align-items: center;
             border-radius: 4px;
+            box-shadow: 0 0 8px 1px rgb(58, 58, 58);
             transition-duration: 200ms;
         }
 
@@ -112,9 +114,9 @@
     <section>
         <div>
             <img src="https://avatars.githubusercontent.com/u/122119019?v=4" />
-            <h2>My socials</h2>
+            <h2>Anas</h2>
             <div>
-                <a href="https://drive.google.com/file/d/1bMajQcrqac1mChGvUz6jDGnxgKscdWNf/view?usp=drive_link">
+                <a href="tel:01012171666">
                     <i class="fa-solid fa-mobile"></i>
                     <p>Phone Number</p>
                 </a>
