--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             text-decoration: none;
             gap: 20px;
             align-items: center;
-            border-radius: 4px;
+            border-radius: 7px;
             box-shadow: 0 0 8px 1px rgb(58, 58, 58);
             transition-duration: 200ms;
         }
@@ -116,7 +116,7 @@
             <img src="https://avatars.githubusercontent.com/u/122119019?v=4" />
             <h2>Anas</h2>
             <div>
-                <a href="tel:01012171666">
+                <a href="tel:+201012171666">
                     <i class="fa-solid fa-mobile"></i>
                     <p>Phone Number</p>
                 </a>
