--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <i class="fa-solid fa-mobile"></i>
                     <p>Number</p>
                 </a>
-                <a href="https://www.snapchat.com/add/anas_idk0?share_id=m7j3Bcb3kX8&locale=en-US">
+                <a href="https://www.snapchat.com/add/a.n4ss?share_id=m7j3Bcb3kX8&locale=en-US">
                     <i class="fa-brands fa-snapchat"></i>
                     <p>Snapchat</p>
                 </a>
