--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </head>
 
 <body>
-    <img src="https://pin.it/6S67HEA" />
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2Fce%2Fb3%2F4e%2Fceb34e7c11b430f389cd85ebe8a1fa15.jpg&f=1&nofb=1&ipt=240ba7f787a266bb092a247d1b26e15a0739b5072cb52db4fac13364c324af47&ipo=images" />
     <section>
         <div>
             <img src="https://avatars.githubusercontent.com/u/122119019?v=4" />
