--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             font-family: 'Saira', sans-serif;
             font-weight: 450;
             text-transform: uppercase;
-            color: rgb(255, 250, 250);
+            color: rgb(0, 0, 0);
             text-shadow: 0 0 4px transparent, 0 1px 2px rgb(218, 218, 218);
         }
 
@@ -109,7 +109,7 @@
 </head>
 
 <body>
-    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2Fce%2Fb3%2F4e%2Fceb34e7c11b430f389cd85ebe8a1fa15.jpg&f=1&nofb=1&ipt=240ba7f787a266bb092a247d1b26e15a0739b5072cb52db4fac13364c324af47&ipo=images" />
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F3896827.jpg&f=1&nofb=1&ipt=2511bf1df76f87c44e90b397bc7e49591c719da0a719a15126a6698b5279e625&ipo=images" />
     <section>
         <div>
             <img src="https://avatars.githubusercontent.com/u/122119019?v=4" />
