--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             justify-content: center;
             border: 1.7px solid rgb(0, 0, 0);
             padding: 15px;
-            color: rgb(0, 0, 0);
+            color: rgb(255, 255, 255);
             text-shadow: 0 0 4px transparent, 0 1px 2px rgb(218, 218, 218);
             text-decoration: none;
             gap: 20px;
@@ -109,10 +109,10 @@
 </head>
 
 <body>
-    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F3896827.jpg&f=1&nofb=1&ipt=2511bf1df76f87c44e90b397bc7e49591c719da0a719a15126a6698b5279e625&ipo=images" />
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2Ffb%2F79%2Ff3%2Ffb79f32e273a7f5c2154928fe29ce396.jpg&f=1&nofb=1&ipt=b6387e8d595df5ac5425ebd3013003fcbb8ed442151a1ab69fbdf8814d2d7ea5&ipo=images" />
     <section>
         <div>
-            <img src="https://avatars.githubusercontent.com/u/122119019?v=4" />
+            <img src="https://pin.it/5HhjUPI" />
             <h2>Anas</h2>
             <div>
                 <a href="tel:+201012171666">
