--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
             text-shadow: 0 0 4px transparent, 0 1px 2px rgb(218, 218, 218);
         }
 
-   
-
+      body >img {
+        object-fit: cover;
+        position: absolute ; top: 0;
+        left: 0;
+        height 100%;
+        width: 100%;
+                  }
         section {
             display: grid;
             place-items: center;
