--- a/index.html
+++ b/index.html
@@ -119,23 +119,21 @@
                     <i class="fa-solid fa-mobile"></i>
                     <p>tel+01012171666</p>
                 </a>
-                <a href="https://www.tiktok.com/@saramagdyali">
-                    <i class="fa-brands fa-tiktok"></i>
-                    <p>TikTok</p>
+                <a href="">
+                    <i class="fa-brands fa-instagram"></i>
+                    <p>Instagram</p>
                 </a>
                 
-                <a href="https://www.youtube.com/@saramagdyaliigcsemathemati6326">
-                    <i class="fa-brands fa-youtube"></i>
-                    <p>Youtube</p>
+                <a href="https://www.snapchat
+.com/add/a.4nss?share_id=m7j3Bcb3kX8&locale">
+                    <i class="fa-brands fa-snapchat"></i>
+                    <p>Snapchat</p>
                 </a>
-                <a href="https://m.facebook.com/SMathematics3">
-                    <i class="fa-brands fa-facebook"></i>
-                    <p>Facebook</p>
+                <a href="">
+                    <i class="fa-brands fa-whatsapp"></i>
+                    <p>WhatsApp</p>
                 </a>
-                <a href="https://www.saramagdy.com/">
-                    <i class="fa-solid fa-globe"></i>
-                    <p>Website</p>
-                </a>
+     
                 </a>
             </div>
         </div>
