--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <i class="fa-solid fa-mobile"></i>
                     <p>tel+01012171666</p>
                 </a>
-                <a href="">
+                <a href="https://www.instagram.com/4n.4_s?igsh=MWlvOXdwbWY3MGwzbQ==">
                     <i class="fa-brands fa-instagram"></i>
                     <p>Instagram</p>
                 </a>
@@ -129,7 +129,7 @@
                     <i class="fa-brands fa-snapchat"></i>
                     <p>Snapchat</p>
                 </a>
-                <a href="">
+                <a href="https://wa.me/qr/T6SOQRUV3PL6M1">
                     <i class="fa-brands fa-whatsapp"></i>
                     <p>WhatsApp</p>
                 </a>
