--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
             <h2>Anas</h2>
             <div>
 
-                <a href="">
+                <a href="tel+01012171666">
                     <i class="fa-solid fa-mobile"></i>
-                    <p>tel+01012171666</p>
+                    <p>Number</p>
                 </a>
                 <a href="https://www.instagram.com/4n.4_s?igsh=MWlvOXdwbWY3MGwzbQ==">
                     <i class="fa-brands fa-instagram"></i>
