--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
             <h2>Anas</h2>
             <div>
 
-                <a href="tel+01012171666">
+                <a href="tel=01012171666">
                     <i class="fa-solid fa-mobile"></i>
                     <p>Number</p>
                 </a>
-                <a href="https://www.instagram.com/4n.4_s?igsh=MWlvOXdwbWY3MGwzbQ==">
+                <a href="https://www.instagram.com/4n.4_s">
                     <i class="fa-brands fa-instagram"></i>
                     <p>Instagram</p>
                 </a>
