--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </a>
                 
                 <a href="https://www.snapchat
-.com/add/a.4nss?share_id=m7j3Bcb3kX8&locale">
+.com/add/a.n4ss?share_id=m7j3Bcb3kX8&locale">
                     <i class="fa-brands fa-snapchat"></i>
                     <p>Snapchat</p>
                 </a>
