--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h2>Anas</h2>
             <div>
 
-                <a href="tel=01012171666">
+                <a href="tel:+201012171666">
                     <i class="fa-solid fa-mobile"></i>
                     <p>Number</p>
                 </a>
