--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <i class="fa-solid fa-mobile"></i>
                     <p>Number</p>
                 </a>
-                <a href="https://www.instagram.com/4n.4_s">
+                <a href="https://www.instagram.com/4n.4_s?igsh=MWlvOXdwbWY3MGwzbQ">
                     <i class="fa-brands fa-instagram"></i>
                     <p>Instagram</p>
                 </a>
