--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2Ffb%2F79%2Ff3%2Ffb79f32e273a7f5c2154928fe29ce396.jpg&f=1&nofb=1&ipt=b6387e8d595df5ac5425ebd3013003fcbb8ed442151a1ab69fbdf8814d2d7ea5&ipo=images" alt="bg" />
     <section>
         <div>
-            <img src="https://scontent-waw1-1.cdninstagram.com/v/t51.2885-19/404310433_927514652136804_3474033396648667265_n.jpg?stp=dst-jpg_s320x320&_nc_ht=scontent-waw1-1.cdninstagram.com&_nc_cat=100&_nc_ohc=W82JpP_fcOwAX-HUyAP&edm=AOQ1c0wBAAAA&ccb=7-5&oh=00_AfCEgEM-6UlDmFcXUdGuGNpFpEXN3L7oq-L5_afnS5Hrzg&oe=659EC975&_nc_sid=8b3546" alt="dp" />
+            <img src="https://avatars.githubusercontent.com/u/122119019?v=4" alt="dp" />
             <h2>Anas</h2>
             <div>
 
