--- a/index.html
+++ b/index.html
@@ -138,7 +138,21 @@
             </div>
         </div>
     </section>
-    
+    <script>
+    $(document).ready(function() {
+     $('[title="Hosted on free web hosting 000webhost.com. Host your own website for FREE."]').hide(); });
+    </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            var disclaimer = document.querySelector("img[alt='www.000webhost.com']");
+            if(disclaimer) {
+                disclaimer.remove();
+            }
+        });
+
+    </script> 
+
+
 </body>
 
 </html>
